# Documentation-Writer

./: LICENSE  README.md  pyproject.toml
src/: app.py  call_graph_parsing.py  cfg.py  directory_parsing.py  docstring_writing.py  dunders.py  feature_analyzing.py  file_analyzing.py  main.py  readme_writing.py  setup_instructing.py  usage_instructing.py  util.py
src/prompts/: docstring_writer.txt  feature_analyzer.txt  file_analyzer.txt  readme_writer.txt  setup_instructor.txt  usage_instructor.txt
